# decoding-gxx

./: 404.html  Gemfile  LICENSE  README.md  _config.yml  content.md  feed.xml  index.html  index.md
2019/12/14/: setup-insfrastructure-to-write-plugins.html
2021/12/12/: gxx-plugins-primer.html  plugin-examples-overview.html
_posts/: 2019-12-14-setup-insfrastructure-to-write-plugins.md  2021-12-12-gxx-plugins-primer.md  2021-12-12-plugin-examples-overview.md
docs/: README
plugins/: CMakeLists.txt
plugins/00_dummy_plugin/: CMakeLists.txt
plugins/01_basic_plugin/: BasicGxxPlugin.cpp  CMakeLists.txt
plugins/02_custom_metadata_plugin/: CMakeLists.txt  CustomMetaDataPlugin.cpp  PluginMetaData.h
plugins/03_plugin_info_by_cb/: CMakeLists.txt  GccPluginCallback.cpp  GccPluginCallback.h  PluginInfobyCallback.cpp
plugins/04_cxx_ast/: CMakeLists.txt  CxxAst.cpp
plugins/scripts/: build_plugins.sh  check_plugins.sh  cleanup.sh  debug_check_plugins.sh  install_gxx.sh  run_plugins.sh  setup_env.sh
plugins/test_files/: TestFile.cpp
slide-deck/: DecodingGxx.pptx
